Fixed longer game type text from misalignment

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -43,10 +43,13 @@
         border-left: 1em solid transparent;
         
         display: table-cell;
+        align-items: center;
+        border-bottom: 1em solid transparent;
+        // text-align: center; // makes text center aligned (horizontally)
     }
 
     .list-item-control-buttons {
-        // float: right;
+        float: right;
         // padding-right: 1em;
         display: table-cell;
         border-left: 1em solid transparent;
